--- a/package.json
+++ b/package.json
@@ -120,7 +120,9 @@
     "dompurify": "^2.3.1",
     "favico.js-slevomat": "^0.3.11",
     "gifuct-js": "^2.1.2",
+    "hsluv": "^1.0.1",
     "jed": "1.1.1",
+    "js-sha1": "^0.7.0",
     "lit": "^2.4.0",
     "localforage-webextensionstorage-driver": "^3.0.0",
     "lodash-es": "^4.17.21",
